# qcalc

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
include/: qcalc.h  utils.h
src/: division.c  fc.c  main.c  prime.c  reciprocal.c  utils.c
src/tests/: test_qcalc.sh
summary/: summarize.sh
